--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <script src="phaser.min.js"></script>
     <script type="module" src="MainMenu.js"></script>
     <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
         @font-face {
             font-family: 'GipsieroOwtLine';
             src: url('assets/fonts/Gipsiero OwtLine.otf') format('opentype');
